# code-astro_group30

./: .gitignore  README.md  astro_astro_grp30.py  example.ipynb  hyperparameters.json  prediction_stellar_classes_1.ipynb  pyproject.toml  requirement.txt  requirements.txt
StellaClass/: hyperparams.py  predict.py  trained_model.ipynb
docs/: conf.py  index.rst  prediction.rst
examples/: example.ipynb
stellar_prediction/: trained_model.ipynb
tests/: conftest.py  test_decision_tree.py  test_integration.py  test_sdss.py
