[build-system]
requires = [
    "setuptools", 
    "numpy",
    "cython", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "StellaClass"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.0",
    "astropy>=4",
    "scipy",
    "matplotlib",
    "pytest",
    "pandas",
    "astroquery",
    "scikit-learn>=1.2.2,<2.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages]
find = {}
